# moneta

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
coin-base/: Cargo.toml  README.md
coin-base/src/: lib.rs
coin-market-cap/: .env  Cargo.toml  Dockerfile.debian  README.md  sqlx-data.json
coin-market-cap/config/: base.yaml  dev.yaml  prod.yaml
coin-market-cap/docker/: Dockerfile.alpine  Dockerfile.debian  Dockerfile.scratch
coin-market-cap/migrations/: 20211013165116_create_crypto_map_table.sql  20211013165116_create_cryto_map_table.sql  20211018112204_create_crypto_listings_latest_table.sql  20211018112204_create_cryto_listings_latest_table.sql
coin-market-cap/scripts/: init_db.sh
coin-market-cap/src/: coin_market.rs  config.rs  configuration.rs  database.rs  lib.rs  main.rs
coin-market-cap/tests/: check_config.rs  fetch_crypto_data.rs  load_config.rs  parse_input.rs  parse_input_json.rs  update_database.rs
coin-market-cap/tests/data/: cryptocurrency_listings_latest_1.json  cryptocurrency_listings_latest_100.json  cryptocurrency_listings_latest_2.json  cryptocurrency_listings_latest_3.json  cryptocurrency_listings_latest_50.json  cryptocurrency_listings_latest_ignored_fields.json  cryptocurrency_map.json  cryptocurrency_map_0.json  cryptocurrency_map_100.json  cryptocurrency_map_100_ranked.json  cryptocurrency_map_50.json
crypto-forex/: Cargo.toml  README.md
crypto-forex/config/: base.yaml  dev.yaml
crypto-forex/src/: cfx.rs  config.rs  database.rs  lib.rs  main.rs  model.rs  route.rs
crypto-forex/src/route/: crypto_listing.rs  crypto_map.rs  mod.rs
cryto-forex/: Cargo.toml
cryto-forex/src/: main.rs
