[package]
name = "coin-market-cap"
authors = ["Denis Deniz González <denis2.glez@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_ignored = "0.1.2"
serde_json = "1.0.68"

rust_decimal = {version = "1.16.0", features = ["serde-arbitrary-precision"]}

tokio = { version = "1.12.0", features = ["full"] }

chrono = { version = "0.4.19", features = ["serde"] }

reqwest = { version = "0.11.5", default-features = false, features = [
    "json",
    "rustls-tls",
] }

[dev-dependencies]
