[package]
name = "coin-market-cap"
authors = ["Denis Deniz González <denis2.glez@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_ignored = "0.1.2"
serde_json = "1.0.68"

thiserror = "1.0.30"
log = "0.4.14"

rust_decimal = { version = "1.16.0", features = ["serde-arbitrary-precision"] }

tokio = { version = "1.12.0", features = ["full"] }

chrono = { version = "0.4.19", features = ["serde"] }

[dependencies.config]
version = "0.11.0"
default-features = false
features = ["yaml"]

[dependencies.reqwest]
version = "0.11.5"
default-features = false
features = ["json", "gzip", "rustls-tls"]

[dependencies.sqlx]
version = "0.5.9"
default-features = false
features = [
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
  "offline",
]


[dev-dependencies]
