[package]
name = "coin-market-cap"
authors = ["Denis Deniz González <denis2.glez@gmail.com>"]
license = "MIT"
repository = "https://github.com/denis2glez/moneta"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"

thiserror = "1.0.30"
log = "0.4.14"

tokio = { version = "1.13.0", features = ["full"] }

chrono = { version = "0.4.19", features = ["serde"] }

[dependencies.rust_decimal]
version = "1.17.0"
features = ["serde-arbitrary-precision", "db-postgres", "db-tokio-postgres"]

[dependencies.config]
version = "0.11.0"
default-features = false
features = ["yaml"]

[dependencies.reqwest]
version = "0.11.6"
default-features = false
features = ["json", "gzip", "rustls-tls"]

[dependencies.sqlx]
version = "0.5.9"
default-features = false
features = [
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
  "offline",
  "decimal",
]

[dev-dependencies]
serde_ignored = "0.1.2"
serial_test = "0.5.1"


# Special configuration for musl-64 bits platforms (jemalloc doesn't support i686)
[target.'cfg(all(target_env = "musl", target_pointer_width = "64"))'.dependencies.jemallocator]
version = "0.3.2"
