[package]
name = "crypto-forex"
authors = ["Denis Deniz González <denis2.glez@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
flexbuffers = "2.0.0"
config = { version = "0.11.0", default-features = false, features = ["yaml"] }

actix-web = "=4.0.0-beta.9"
actix-http = "=3.0.0-beta.10"
reqwest = { version = "0.11.5", default-features = false, features = [
    "json",
    "rustls-tls",
] }

[dev-dependencies]
