[package]
name = "crypto-forex"
authors = ["Denis Deniz González <denis2.glez@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
flexbuffers = "2.0.0"
config = { version = "0.11.0", default-features = false, features = ["yaml"] }
log = "0.4.14"

actix-web = "=4.0.0-beta.9"
actix-http = "=3.0.0-beta.10"

thiserror = "1.0.30"
chrono = { version = "0.4.19", features = ["serde"] }

[dependencies.reqwest]
version = "0.11.5"
default-features = false
features = ["json", "rustls-tls"]

[dependencies.rust_decimal]
version = "1.16.0"
features = ["serde-arbitrary-precision", "db-postgres", "db-tokio-postgres"]

[dependencies.sqlx]
version = "0.5.9"
default-features = false
features = [
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
  "offline",
  "decimal",
]

[dev-dependencies]
